2009-08-24  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (fs_info::update): Add comment.
	* path.cc (symlink_info::check_reparse_point): Return -1 for volume
	mount points.  Explain why.
	(symlink_info::check): Call fs.update again for volume mount points.
	Explain why.

2009-08-24  Corinna Vinschen  <corinna@vinschen.de>

	* globals.cc (ro_u_volume): New R/O unicode string.
	* path.cc (symlink_info::check_reparse_point): Fix check for volume
	mount points to work on Vista and later as well.

2009-08-22  Corinna Vinschen  <corinna@vinschen.de>

	* strfuncs.cc (__set_charset_from_codepage): Add codepages 20866
	(KOI8-R) and 21866 (KOI8-U).

2009-08-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* dll_init.h (has_dtors): New flag.
	(run_dtors): New wrapper function which avoids calling dtors more than
	once.
	* dll_init.cc (dll_global_dtors): Use dll.run_dtors wrapper.
	(dll_list::detach): Ditto.
	(dll_list::alloc): Set has_dtors flag.

2009-08-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* fcntl.cc (fcntl64): Detect negative fd as error.

2009-08-21  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (mmap64): Allocate fh_disk_file on cygheap.  Delete
	explicitely before returning.

2009-08-20  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (build_fh_dev): Take additional bool parameter indicating
	whether set_name should be called or not.
	(dtable::dup_worker): Call build_fh_pc with new second parameter set
	to false.  Explain why.  If fhandler's dup failed, delete rather than
	cfree newfh and set newfh to NULL to indicate failure correctly.
	* dtable.h (build_fh_pc): Change declaration according to above change.
	Default set_name parameter to true.
	* mmap.cc (mmap_record::free_fh): Delete rather than cfree fh.

2009-08-18  Christopher Faylor  <me+cygwin@cgf.cx>

	* dtable.cc (dtable::fixup_after_exec): Close any popen'ed file handles here.
	* fhandler.h (fhandler_*::ispipe): New function.
	(fhandler_base::get_popen_pid): Define virtual function.